--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "main": "server.js",
   "dependencies": {
+    "@types/express": "^4.16.1",
+    "@types/morgan": "^1.7.35",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@types/node": "^11.13.6",
     "eslint": "^5.16.0"
   },
   "scripts": {
