--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "mongoose": "^5.5.10",
     "morgan": "^1.9.1",
     "uuid": "^3.3.2"
   },
