--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movie_api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "dependencies": {
     "@types/cors": "^2.8.5",
     "@types/express": "^4.16.1",
@@ -26,7 +26,6 @@
     "eslint": "^5.16.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "repository": {
