--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/morgan": "^1.7.35",
     "@types/passport": "^1.0.0",
     "@types/react": "^16.8.20",
+    "@types/react-router-dom": "^4.3.5",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -22,14 +23,16 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^11.13.6",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
